--- a/package.json
+++ b/package.json
@@ -26,5 +26,6 @@
     "gh-pages": "^5.0.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
-  }
+  },
+  "homepage": "http://AdanAHassan.github.io/wiki"
 }
